# cci_GettingStarted

./: .gitignore  .gitmodules  README.md
GettingStarted/: .project  sdkconfig  sdkconfig.defaults
GettingStarted/AppCanDriverEsp32/: CanDriverEsp32.cpp
GettingStarted/AppCommon/: AppHW.cpp
GettingStarted/AppIso/: AppMemAccess.cpp  App_Main.c  App_VTClient.c
GettingStarted/Settings/: settings.h  settingsNVS.cpp
GettingStarted/main/: CMakeLists.txt
